Run with http-serve after building with yarn build:shell and yarn build:profile
copy profile folder into dist
and run with http-serve

--- a/app-profile/projects/mdmf-profile/src/app/profile/profile.component.html
+++ b/app-profile/projects/mdmf-profile/src/app/profile/profile.component.html
@@ -2,4 +2,5 @@
   <h2>Profile (Microfrontend)</h2>
   <p>This profile component is being remotely loaded into the application using Module Federation, angular is shared so
     the download is minimal for the frontend</p>
+  <h2>BMC Modification - this is working on angular 12</h2>
 </div>
